[package]
name = "carrier-nodejs"
version = "0.11.6"
authors = ["Arvid E. Picciani <arvid@devguard.io>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "carrier_nodejs"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.3.1"

[dependencies]
neon                = { git = "https://github.com/aep/neon.git"}
carrier             = "0.12.0"
log                 = "0.4"
env_logger          = "0.6.0"

